<resources>
    <string name="app_name">Music Player</string>
    <string name="TextView1">TextView1</string>
    <string name="TextView2">TextView2</string>
    <string name="TextView3">TextView3</string>
    <string name="InitialTime">0:00</string>
    <string name="Song">Song</string>
    <string name="Artist">Artist</string>
    <string name="Details">Details</string>
    <string name="Stuff">stuff</string>
    <string name="Search">Search</string>
    <string name="Favorites">Favorites</string>
    <string name="Playlist">Playlist</string>
    <string name="Size">Size</string>
    <string name="AddTo">Add to</string>
    <string name="NewPlaylist">New Playlist</string>
    <string name="PlaylistName">Playlist Name</string>
    <string name="CreateQueue">Create Queue</string>
    <string name="CreatePlaylist">Create Playlist</string>
    <string name="SearchFilter">Search Filter</string>
    <string name="ChooseTheme">Choose Theme</string>
    <string name="Remove">Remove</string>
    <string name="RemoveSong">Remove Song</string>
    <string name="RemovePlaylist">Remove Playlist</string>
    <string name="Rename">Rename</string>
    <string name="RenamePlaylist">Rename Playlist</string>
    <string name="Export">Export</string>
    <string name="ExportPlaylist">Export Playlist</string>
    <string name="Divider">•</string>
    <string name="Zero">0</string>
    <string name="Minutes">Minutes</string>
    <string name="SetTimer">Set Timer</string>
    <string name="GenerateAgain">Generate Again</string>
    <string name="Pause">Pause</string>
    <string name="Play">Play</string>
    <string name="Next">Next</string>
    <string name="Previous">Previous</string>
    <string name="Bluetooth">Bluetooth</string>

</resources>
