<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100">



    <ImageView
        android:id="@+id/album_art"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_weight="85"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_weight="15"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp">

        <TextView
            android:id="@+id/textView1"
            android:textSize="16sp"
            android:singleLine="true"
            android:textColor="@color/itemlightselectorblue"
            android:textStyle="bold"
            android:gravity="start"
            android:textAlignment="viewStart"
            android:text="@string/TextView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/textView2"
            android:textSize="14sp"
            android:singleLine="true"
            android:textColor="@color/itemdefaultselectorblue"
            android:gravity="start"
            android:textAlignment="viewStart"
            android:text="@string/TextView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/textView3"
            android:textSize="14sp"
            android:singleLine="true"
            android:textColor="@color/itemdefaultselectorblue"
            android:gravity="start"
            android:textAlignment="viewStart"
            android:text="@string/TextView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>