<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/layout_playlist"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightWhite100"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app1="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_playlist"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app1:contentInsetStart="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/ibtn_playlist_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_ripple"
                android:layout_marginTop="4dp"
                android:src="@drawable/ic_chevron_left48dp"/>

            <TextView
                android:id="@+id/textview_playlist_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="4dp"
                android:text="@string/Playlist"
                android:textSize="20sp"
                android:textColor="@color/generalTextDark"/>
            <TextView
                android:id="@+id/textview_playlist_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginStart="50dp"
                android:layout_below="@+id/textview_playlist_name"
                android:text="@string/Size"
                android:textSize="15sp"
                android:textColor="@color/selector_default"/>

            <TextView
                android:id="@+id/textview_playlist_divider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_below="@+id/textview_playlist_name"
                android:layout_toEndOf="@+id/textview_playlist_size"
                android:text="@string/Divider"
                android:textSize="15sp"
                android:textColor="@color/selector_default"/>

            <TextView
                android:id="@+id/textview_playlist_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_below="@+id/textview_playlist_name"
                android:layout_toEndOf="@+id/textview_playlist_divider"
                android:text="@string/InitialTime"
                android:textSize="15sp"
                android:textColor="@color/selector_default"/>

            <ImageButton
                android:id="@+id/ibtn_timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="25dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/button_ripple"
                android:layout_marginTop="4dp"
                android:src="@drawable/ic_timer24dp"/>
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_playlist"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar_playlist"
        app1:cardCornerRadius="60dp"
        app1:cardElevation="0dp">

        <ImageView
            android:id="@+id/imageview_playlist_background_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar_playlist"
            android:scaleType="centerCrop"/>
        <ImageView
            android:id="@+id/imageview_playlist_background_layer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar_playlist"
            android:alpha="0.5"/>

        <ListView
            android:id="@+id/listview_playlist_songs"
            android:layout_below="@+id/toolbar_playlist"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:dividerHeight="18dp"
            android:divider="@drawable/list_divider"
            android:layout_marginTop="1.5dp"/>
    </androidx.cardview.widget.CardView>

</RelativeLayout>